--- a/.github/workflows/yarn-dedup.yml
+++ b/.github/workflows/yarn-dedup.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Yarn lock check
 
 on:
   pull_request:
@@ -28,4 +28,4 @@ jobs:
       - run: npx --yes yarn-deduplicate -s fewer
       - run: git diff -s --exit-code
       - if: failure()
-        run: Please run `npx --yes yarn-deduplicate -s fewer`
+        run: echo 'Please run `npx --yes yarn-deduplicate -s fewer`'
